--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/wallets/wallets.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/wallets/wallets.scss
@@ -23,6 +23,17 @@
       color: #202531;
       flex: 1;
       font-size: 16px;
+      display: flex;
+      flex-direction: column;
+
+      .details-title {
+        font-size: 20px;
+        padding: 10px 0px;
+      }
+
+      .details-buttons {
+        padding: 0 10px;
+      }
 
       .details-param {
         display: flex;
@@ -81,8 +92,9 @@
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      border-radius: 10px;
+      border-radius: 2px;
       font-size: 16px;
+      margin-right: 5px;
 
       cursor: pointer;
     }
