--- a/packages/wallet-desktop/src/renderer/components/horizontal-accordion/horizontal-accordion.scss
+++ b/packages/wallet-desktop/src/renderer/components/horizontal-accordion/horizontal-accordion.scss
@@ -16,6 +16,7 @@
 
   >.accordion-extendible {
     flex: 1;
+    color: #202531;
     background-image: linear-gradient(to bottom left, white, #D2D6E1);
   }
 }
