Added wallet protocol fist release

--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -1,7 +1,11 @@
 
 .settings {
-  .settings-group {
+  .settings-list {
     flex: 1;
+  }
+
+  .settings-group {
+    flex: 3;
     font-size: 16px;
 
     .settings-item {
