Wallet transaction utils Identity info api request Password with symbols Wallet reset

--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -16,6 +16,12 @@
           cursor: pointer;
         }
       }
+
+      &.settings-number {
+        label {    
+          margin-right: 10px;
+        }
+      }
     }
   }
 }
