New explorer listview

--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/explorer/explorer.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/explorer/explorer.scss
@@ -98,6 +98,11 @@
       margin-right: 5px;
 
       cursor: pointer;
+
+      &:disabled {
+        background-color: #4caf4f69; /* Green */
+        cursor: not-allowed;
+      }
     }
   }
 
