--- a/packages/wallet-desktop/src/renderer/index.scss
+++ b/packages/wallet-desktop/src/renderer/index.scss
@@ -13,6 +13,12 @@ body {
   font-family: sans-serif;
 }
 
+.scroll {
+  overflow: auto;
+  height: 100%;
+  display: flex;
+}
+
 .group-form-field {
   position: relative;
   width: 100%;
@@ -104,7 +110,6 @@ button.modern {
     border-color: $dark-secondary;
   }
 }
-
 
 input.modern {
   &::placeholder {
