--- a/packages/wallet-desktop/src/renderer/windows/main/toasts/toasts.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/toasts/toasts.scss
@@ -24,7 +24,6 @@ $error-color: #F5426B;
     border-left-width: 10px;
     border-left-style: solid;
     max-width: 360px;
-    opacity: 0;
 
     &.toast-transition-enter-active {
       animation: fadein 0.5s;
@@ -32,6 +31,14 @@ $error-color: #F5426B;
 
     &.toast-transition-exit-active {
       animation: fadeout 0.5s;
+    }
+
+    &.toast-transition-enter {
+      opacity: 0;
+    }
+
+    &.toast-transition-exit {
+      opacity: 0;
     }
 
     &.toast-transition-enter-done {
