--- a/packages/wallet-desktop/src/renderer/components/tree-list/tree-list.scss
+++ b/packages/wallet-desktop/src/renderer/components/tree-list/tree-list.scss
@@ -35,9 +35,9 @@
       }
 
       > .tree-list-icon {
-        width: 13px;
-        height: 13px;
-        margin-right: 5px;
+        width: auto;
+        height: 15px;
+        margin-right: 6px;
       }
 
       &:hover {
