--- a/packages/wallet-protocol-utils/src/style.css
+++ b/packages/wallet-protocol-utils/src/style.css
@@ -1,4 +1,4 @@
-.wallet-protocol-overlay {
+.__WALLET_PROTOCOL_OVERLAY__ {
     position: absolute;
     display: flex;
     height: 100%;
@@ -12,7 +12,7 @@
     color: #202531;
 }
 
-.wallet-protocol-overlay .modal {
+.__WALLET_PROTOCOL_OVERLAY__ .__WALLET_MODAL__ {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,24 +23,24 @@
     background-image: linear-gradient(to bottom left, white, #D2D6E1);
 }
 
-.wallet-protocol-overlay .title {
+.__WALLET_PROTOCOL_OVERLAY__ .__WALLET_TITLE__ {
     font-weight: bold;
     padding: 5px;
 }
 
-.wallet-protocol-overlay .message {
+.__WALLET_PROTOCOL_OVERLAY__ .__WALLET_MESSAGE__ {
     opacity: 0.5;
     padding: 5px;
     font-size: 15px
 }
 
-.wallet-protocol-overlay .input-box {
+.__WALLET_PROTOCOL_OVERLAY__ .__WALLET_INPUT_BOX__ {
     display: flex;
     margin: 20px;
     height: 32px;
 }
 
-.wallet-protocol-overlay input {
+.__WALLET_PROTOCOL_OVERLAY__ .__WALLET_INPUT__ {
     border-radius: 3px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -50,7 +50,7 @@
     border-right: none;
 }
 
-.wallet-protocol-overlay button {
+.__WALLET_PROTOCOL_OVERLAY__ .__WALLET_BUTTON__ {
     height: 100%;
     padding: 5px;
     border-radius: 3px;
