--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/explorer/explorer.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/explorer/explorer.scss
@@ -52,6 +52,7 @@
           flex: 1;
 
           textarea {
+            padding: 10px;
             height: 100%;
             resize: none;
           }
