--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/connect/connect.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/connect/connect.scss
@@ -34,6 +34,14 @@
         margin-top: 5px;
         opacity: 80%;
       }
+
+      > .pin {
+        height: 30px;
+        margin-top: 6%;
+        font-weight: bold;
+        font-size: 24px;
+        font-family: monospace;
+      }
     }
 
     .pairing {
@@ -48,7 +56,7 @@
     }
 
     .sync {
-      margin-top: 15%;
+      margin-top: 6%;
       display: flex;
       justify-content: center;
       position: relative;
