--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/explorer/explorer.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/explorer/explorer.scss
@@ -10,7 +10,8 @@
   .explorer-content {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    min-width: 200px;
+    max-width: 500px;
   }
 
   .details {
