--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -1,7 +1,10 @@
 
 .settings {
   .settings-list {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-width: 200px;
+    max-width: 500px;
   }
 
   .settings-group {
