--- a/packages/wallet-desktop/src/renderer/components/context-menu/context-menu.scss
+++ b/packages/wallet-desktop/src/renderer/components/context-menu/context-menu.scss
@@ -10,6 +10,7 @@
   background-color: white;
   display: flex;
   flex-direction: column;
+  z-index: 1000;
   padding: 4px 0;
   border: 1px solid black;
   font-size: 15px;
