--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -28,6 +28,7 @@
 
         .settings-number, .settings-input {
           display: flex;
+          align-items: center;
 
           > label {
             margin-right: 10px;
@@ -71,10 +72,6 @@
       .settings-object {
         > label {
           font-weight: bold;
-        }
-
-        > .settings-object-properties {
-          margin-top: 10px;
         }
       }
 
