--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/connect/connect.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/connect/connect.scss
@@ -115,12 +115,14 @@
       }
 
       .sync-button {
+        box-sizing: border-box;
+        display: flex;
         padding: 10px;
         color: #202531;
         background-color: #D2D6E1;
         border-radius: 50px;
-        width: 32px;
-        height: 32px;
+        width: 50px;
+        height: 50px;
         position: absolute;
         top: 78px;
         cursor: pointer;
