Styles improvement and reload identities

--- a/packages/wallet-desktop/src/renderer/components/section/section.scss
+++ b/packages/wallet-desktop/src/renderer/components/section/section.scss
@@ -20,9 +20,10 @@
     }
 
     .operation-icon {
-      height: 21px;
-      padding: 5px 3px;
-      margin: 0px 2px;
+      height: 30px;
+      padding: 4px;
+      border-radius: 2px;
+      margin: 4px;
       opacity: 0.8;
       cursor: pointer;
 
