--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -1,4 +1,7 @@
 
+$array-bg: bootstrapUtils.tint-color(i3m.$primary, 90%);
+$array-border-color: bootstrapUtils.shade-color(i3m.$primary, 10%);
+
 .settings {
   .settings-list {
     display: flex;
@@ -30,7 +33,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin-bottom: 5px;
       }
 
       .settings-array {
@@ -39,7 +41,8 @@
           display: flex;
           flex-direction: row;
           align-items: center;
-          padding: 5px;
+          padding: 5px 0;
+          margin-bottom: 10px;
 
           > label {
             font-weight: bold;
@@ -56,6 +59,10 @@
         .settings-array-item {
           display: flex;
           align-items: center;
+          padding-left: 10px;
+          margin-bottom: 5px;
+          background-color: $array-bg;
+          border: 2px solid $array-border-color;
         }
 
         .settings-array-button {
@@ -74,12 +81,18 @@
           }
           
           &.delete-button {
-            margin: 0 5px;
+            margin: 10px;
           }
         }
       }
 
       .settings-object {
+        > .settings-object-header {
+          > button {
+            box-shadow: none;
+          }
+        }
+
         > label {
           font-weight: bold;
         }
