--- a/packages/wallet-desktop/src/renderer/index.scss
+++ b/packages/wallet-desktop/src/renderer/index.scss
@@ -12,6 +12,7 @@
   $light:     i3m.$light,
   $dark:      i3m.$dark,
 
+  $min-contrast-ratio: 3,
   // $accordion-button-active-bg:    bootstrapUtils.tint-color(i3m.$dark-secondary, 90%),
   // $accordion-button-active-color: bootstrapUtils.shade-color(i3m.$dark-secondary, 10%),
 );
