--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/cloud-vault/cloud-vault.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/cloud-vault/cloud-vault.scss
@@ -9,126 +9,8 @@
   display: flex;
   justify-content: center;
 
+  height: 100%;
   width: 100%;
 
-  .center-vertically {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    height: 100%;
-
-    .connect-box {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-
-      > .title { 
-        font-size: 20px;
-        font-weight: bold;
-      }
-
-      > .message {
-        font-weight: 18px;
-        margin-top: 5px;
-        opacity: 80%;
-      }
-
-      > .pin {
-        height: 62px;
-        margin-top: 6%;
-        font-weight: bold;
-        font-size: 62px;
-        font-family: monospace;
-      }
-    }
-
-    .pairing {
-      > .sync {
-        .wave {
-          animation-name: wave;
-          animation-timing-function: linear;
-          animation-iteration-count: infinite;
-          animation-duration: 2s;
-        }
-      }
-    }
-
-    .sync {
-      margin-top: 6%;
-      display: flex;
-      justify-content: center;
-      position: relative;
-      width: 100%;
-      height: 126px;
-
-      .radar {
-        position: absolute;
-        width: 208px;
-        height: 108px;
-        border-top-left-radius: 100px;
-        border-top-right-radius: 100px;
-        overflow: hidden;
-
-        > * {
-          position: absolute;
-        }
-
-        > .wave {
-          left: 0;
-          position: absolute;
-          width: 208px;
-          height: 208px;
-
-          border-radius: 100px;
-          transform: scale(0, 0);
-          background-image: radial-gradient(circle, #D2D6E100 50%, #D2D6E1);
-        }
-
-        > .circle {
-          border: 4px solid #D2D6E1;
-          border-radius: 100px;
-
-          &.one {
-            width: 200px;
-            height: 200px;
-            opacity: 5%;
-          }
-  
-          &.two {
-            width: 135px;
-            height: 135px;
-            top: 33px;
-            left: 33px;
-            opacity: 10%;
-          }
-  
-          &.three {
-            width: 70px;
-            height: 70px;
-            top: 65px;
-            left: 65px;
-            opacity: 20%;
-          }
-        }
-      }
-
-      .sync-button {
-        padding: 10px;
-        color: #202531;
-        background-color: #D2D6E1;
-        border-radius: 50px;
-        width: 32px;
-        height: 32px;
-        position: absolute;
-        top: 78px;
-        cursor: pointer;
-
-        > svg {
-          width: 32px;
-        }
-      }
-    }
-  }
+  max-width: 1500px;
 }
