--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -3,103 +3,98 @@ $array-bg: bootstrapUtils.tint-color(i3m.$primary, 90%);
 $array-border-color: bootstrapUtils.shade-color(i3m.$primary, 10%);
 
 .settings {
-  .settings-list {
-    display: flex;
-    flex-direction: column;
-    min-width: 200px;
-    max-width: 500px;
-  }
+  .settings-editor {
 
-  .settings-group {
-    flex: 3;
-    font-size: 16px;
+    .settings-form {
+      min-width: 350px;
 
-    .settings-items {
-      padding: 5px 20px;
-
-      .settings-checkbox, .settings-number, .settings-input {
+      .settings-items {
+        display: grid;
         align-items: center;
+        grid-template-columns: auto 1fr;
+        grid-column-gap: 20px;
+        grid-row-gap: 5px;
+        padding: 20px;
 
-        .form-switch {
-          margin-top: -4px;
+        > label {
+          text-overflow: ellipsis;
+          overflow: hidden;
+          grid-column: 1;
         }
 
-        label, input[type='checkbox'] {
-          cursor: pointer;
+        > .form-control {
+          grid-column: 2;
         }
-      }
 
-      .settings-item {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-      }
+        .settings-array {
+          grid-column: 1 / 3;
 
-      .settings-array {
+          > .settings-array-header {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 5px 0;
+            margin-bottom: 10px;
 
-        > .settings-array-header {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          padding: 5px 0;
-          margin-bottom: 10px;
+            > label {
+              font-weight: bold;
+              font-size: 18px;
+              margin-right: 5px;
+            }
+
+            > .settings-array-name {
+              cursor: pointer;
+              flex: 1;
+            }
+          }
+
+          .settings-array-item {
+            display: flex;
+            align-items: center;
+            padding-left: 10px;
+            margin-bottom: 5px;
+            background-color: $array-bg;
+            border: 2px solid $array-border-color;
+          }
+
+          .settings-array-button {
+            &.add-button {
+              height: 30px;
+              width: 30px;
+              padding: 5px;
+              border-radius: 10px;
+              color: #000;
+              opacity: 0.5;
+              cursor: pointer;
+
+              &:hover {
+                opacity: 0.75;
+              }
+            }
+            
+            &.delete-button {
+              margin: 10px;
+            }
+          }
+        }
+
+        .settings-object {
+          flex: 1;
+
+          > .settings-object-header {
+            > button {
+              box-shadow: none;
+            }
+          }
 
           > label {
             font-weight: bold;
-            font-size: 18px;
-            margin-right: 5px;
-          }
-
-          > .settings-array-name {
-            cursor: pointer;
-            flex: 1;
           }
         }
 
-        .settings-array-item {
-          display: flex;
-          align-items: center;
-          padding-left: 10px;
-          margin-bottom: 5px;
-          background-color: $array-bg;
-          border: 2px solid $array-border-color;
+        .settings-description {
+          grid-column: 1 / 3;
         }
-
-        .settings-array-button {
-          &.add-button {
-            height: 30px;
-            width: 30px;
-            padding: 5px;
-            border-radius: 10px;
-            color: #000;
-            opacity: 0.5;
-            cursor: pointer;
-
-            &:hover {
-              opacity: 0.75;
-            }
-          }
-          
-          &.delete-button {
-            margin: 10px;
-          }
-        }
-      }
-
-      .settings-object {
-        > .settings-object-header {
-          > button {
-            box-shadow: none;
-          }
-        }
-
-        > label {
-          font-weight: bold;
-        }
-      }
-
-      .settings-description {
-        margin: 10px 0;
       }
     }
   }
