--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -6,6 +6,10 @@ $array-border-color: bootstrapUtils.shade-color(i3m.$primary, 10%);
   .settings-editor {
 
     .settings-form {
+      width: 100%;
+      height: 100%;
+
+      max-width: 1000px;
       min-width: 350px;
 
       .settings-items {
