--- a/packages/wallet-desktop/src/renderer/index.scss
+++ b/packages/wallet-desktop/src/renderer/index.scss
@@ -16,5 +16,6 @@
   // $accordion-button-active-bg:    bootstrapUtils.tint-color(i3m.$dark-secondary, 90%),
   // $accordion-button-active-color: bootstrapUtils.shade-color(i3m.$dark-secondary, 10%),
 );
+@use 'styles/bootstrap-typeahead.scss' as bootstrapTypeahead;
 
 @include i3m.styles;
