Fixed vault client issue reconnecting. Visual improvements

--- a/packages/wallet-desktop/src/renderer/components/json-ui/json-ui.scss
+++ b/packages/wallet-desktop/src/renderer/components/json-ui/json-ui.scss
@@ -20,7 +20,7 @@ $accordion-border-color: bootstrapUtils.shade-color(i3m.$primary, 10%);
     background-color: $accordion-bg;
   }
 
-  .json-ui-text, .json-ui-boolean {
+  .json-ui-text, .json-ui-boolean, .json-ui-number {
     padding: 10px 20px;
     display: flex;
     align-items: center;
