Enhanced startup: do not mix physical and ram Default providers on settings Debug view

--- a/packages/wallet-desktop/src/renderer/styles/i3m/styles/_index.scss
+++ b/packages/wallet-desktop/src/renderer/styles/i3m/styles/_index.scss
@@ -2,9 +2,11 @@
 @import './reset';
 @import './scroll';
 @import './spinner';
+@import './buttons';
 
 @mixin styles {
   @include reset;
   @include scroll;
   @include spinner;
+  @include buttons;
 }
