--- a/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/routes/wallet/settings/settings.scss
@@ -98,6 +98,16 @@ $array-border-color: bootstrapUtils.shade-color(i3m.$primary, 10%);
 
         .settings-description {
           grid-column: 1 / 3;
+
+          > .settings-description-title {
+            padding: 5px 0;
+            margin-bottom: 10px;
+            > label {
+              font-weight: bold;
+              font-size: 18px;
+              margin-right: 5px;
+            }
+          }
         }
       }
     }
