Fixed 500 errors on wallet protocol Fixed bug when: only syncing when not logged in

--- a/packages/wallet-desktop/src/renderer/windows/main/freeze-overlay/freeze-overlay.scss
+++ b/packages/wallet-desktop/src/renderer/windows/main/freeze-overlay/freeze-overlay.scss
@@ -5,6 +5,7 @@
   height: 100%;
   background-color: #000000cc;
   z-index: 100;
+  user-select: none;
 
   display: flex;
   flex-direction: column;
